Routing for Rooms and room name generation
Routing for rooms
New view for rooms
Room name generation and link

TODO : Socket.IO room configuration

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -120,3 +120,23 @@ body {
   padding: 3px;
   bottom: 25px;
 }
+
+
+// Home
+// -------------------------
+
+#roomForm{
+  width:435px;
+  margin: 0 auto;
+
+  .form-group{
+    margin-right:5px;
+
+    #roomName{
+      width:360px;
+    }
+  }
+  .btn{
+    padding-top:9px;
+  }
+}
