--- a/views/home.jade
+++ b/views/home.jade
@@ -1,8 +1,12 @@
 extends layout
 
 block content
-  h1 Real Time Planning Poker
-  p.lead
-    | Planning Poker is a way to estimate a relative effort for a given task.
-    br
-    | This implementation was build upon new technologies such as NodeJS, Socket.IO...
+	h1 Real Time Planning Poker
+	p.lead
+		| Planning Poker is a way to estimate a relative effort for a given task.
+		br
+		| This implementation was build upon new technologies such as NodeJS, Socket.IO...
+	form#roomForm.form-inline(role='form')
+		.form-group
+			input#roomName.form-control(type='text', placeholder='Creating room name...', readonly=true)
+		button.btn.btn-default(disabled=true) Go ▶
