Ajout route /game
Ajout route /game de façon à réunir les membres de la room puis de
passer à l’étape jeu.

--- a/views/room.jade
+++ b/views/room.jade
@@ -9,6 +9,8 @@ block content
 			h3.panel-title Participants
 		div#participants.panel-body
 			| 
+	a.btn.btn-success.btn-lg.btn-block(type='button', href='/room/#{room}/game') Get planning !
+
 
 block append scripts
 	script(src='/js/room.js?v=#{cacheBuster}')
