TODO Handle disconnect and room separation
Beginning of Socket.IO implementation
Crashes when client disconnect
Client list is available for every room :/

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -141,6 +141,18 @@ body {
   }
 }
 
+// Room
+// -------------------------
+#participants{
+  list-style-type:none;
+  
+  li{
+    display:table-cell;
+    padding:0 10px;
+  }
+}
+
+
 // Game
 // -------------------------
 
