Multi-room dropped. Client log and SPA style app implemented
Dropped the multi-room idea for now, maybe for later implementation.
Clients are now seen and broadcasted by SocketIO.
Animate.css effects added.
SPA

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -54,7 +54,7 @@ body {
   border: 1px solid rgba(0, 0, 0, 0.07);
 
   &:hover {
-    color: #fff;
+	color: #fff;
   }
 }
 
@@ -64,7 +64,7 @@ body {
   border: 1px solid rgba(0, 0, 0, 0.07);
 
   &:hover {
-    color: #fff;
+	color: #fff;
   }
 }
 
@@ -74,7 +74,7 @@ body {
   border: 1px solid rgba(0, 0, 0, 0.07);
 
   &:hover {
-    color: #fff;
+	color: #fff;
   }
 }
 
@@ -84,7 +84,7 @@ body {
   border: 1px solid rgba(0, 0, 0, 0.07);
 
   &:hover {
-    color: #fff;
+	color: #fff;
   }
 }
 
@@ -125,37 +125,10 @@ body {
 // Home
 // -------------------------
 
-#roomForm{
-  width:435px;
-  margin: 0 auto;
-
-  .form-group{
-    margin-right:5px;
-
-    #roomName{
-      width:360px;
-    }
-  }
-  .btn{
-    padding-top:9px;
-  }
-}
-
-// Room
-// -------------------------
-#participants{
-  list-style-type:none;
-  
+#game{
+//  display:none;
   li{
-    display:table-cell;
-    padding:0 10px;
+	word-wrap: break-word;
+	//height: 35px;
   }
-}
-
-
-// Game
-// -------------------------
-
-#currentTask{
-  text-align:center;
 }
