--- a/views/home.jade
+++ b/views/home.jade
@@ -6,7 +6,9 @@ block content
 		| Planning Poker is a way to estimate a relative effort for a given task.
 		br
 		| This implementation was build upon new technologies such as NodeJS, Socket.IO...
-	form#roomForm.form-inline(role='form')
-		.form-group
-			input#roomName.form-control(type='text', placeholder='Creating room name...', readonly=true)
-		button.btn.btn-default(disabled=true) Go ▶
+	a#getPlanning.btn.btn-success.btn-lg.btn-block(type='button') Get planning !
+
+	div#game.row
+		div.col-md-10 
+		div.col-md-2 
+			ul#participants.list-group
