Progress bar updating in real time
Progress bar is now updating in real time
When it is at 100%, a button ‘Reveal Cards’ is shown

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -138,7 +138,7 @@ body {
 	}
 
 	// Progress bar : 100% width when all users selected their cards
-	#progressBar{
+	#progressBarArea{
 		margin:5px 0;
 	}
 
