--- a/views/home.jade
+++ b/views/home.jade
@@ -7,7 +7,7 @@ block content
 			| Planning Poker is a way to estimate a relative effort for a given task.
 			br
 			| This implementation was build upon new technologies such as NodeJS, Socket.IO...
-		a#getPlanning.btn.btn-success.btn-lg.btn-block(type='button') Get planning !
+		button#getPlanning.btn.btn-success.btn-lg.btn-block(type='button') Get planning !
 
 	div#game.row
 		div.col-md-10.clearfix
@@ -16,9 +16,9 @@ block content
 				span.input-group-addon ✍
 				input#username.form-control(type='text', placeholder='User story')
 
-			div#progressBar.progress.progress-striped.active
-				div.progress-bar(role='progressbar', aria-valuenow='0', aria-valuemin='0', aria-valuemax='100', style='width: 0%')
-					span.sr-only 0% Complete
+			div#progressBarArea
+				div#progressBar.progress.progress-striped.active
+					div.progress-bar(role='progressbar', aria-valuenow='0', aria-valuemin='0', aria-valuemax='100', style='width: 0%')
 
 			div#cardsSelection.row
 				div.col-md-1.col-xs-1
