--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -126,12 +126,12 @@ body {
 // -------------------------
 
 #preGame{
-	display: none;
+	//display: none;
 }
 
 #game{
 	// Hide the game until the get planning button is pressed
-  //display:none;
+  display:none;
 	
 	h2#userStory{
 		display:none;
@@ -160,6 +160,13 @@ body {
 			width: 6em;
 			text-align: center;
 			margin: 1em;
+
+			span{
+				height:1.5em;
+				word-break:break-all;
+				display: block;
+				overflow: hidden;
+			}
 
 			div{
 				height: 7em;
