--- a/views/layout.jade
+++ b/views/layout.jade
@@ -22,7 +22,7 @@ html
     meta(name="msapplication-TileColor", content="#b91d47")
     meta(name="msapplication-TileImage" content="/mstile-144x144.png")
     
-    title #{title} - Planning Poker
+    title Planning Poker
     != css('styles')
   body
     #wrap
