--- a/views/home.jade
+++ b/views/home.jade
@@ -12,38 +12,39 @@ block content
 	div#game.row
 		div.col-md-10.clearfix
 			h2#userStory User Story
-			.input-group
-				span.input-group-addon ✍
-				input#username.form-control(type='text', placeholder='User story')
+			form#userStoryForm
+				.input-group
+					span.input-group-addon ✍
+					input.form-control(type='text', placeholder='User story', autofocus)
 
 			div#progressBarArea
 				div#progressBar.progress.progress-striped.active
 					div.progress-bar(role='progressbar', aria-valuenow='0', aria-valuemin='0', aria-valuemax='100', style='width: 0%')
 
 			div#cardsSelection.row
-				div.col-md-1.col-xs-1
+				div.col-md-1.col-xs-2
 					button.btn.btn-default.cardSelection(type='button') 0
-				div.col-md-1.col-xs-1
+				div.col-md-1.col-xs-2
 					button.btn.btn-default.cardSelection(type='button') 1/2
-				div.col-md-1.col-xs-1
+				div.col-md-1.col-xs-2
 					button.btn.btn-default.cardSelection(type='button') 1
-				div.col-md-1.col-xs-1
+				div.col-md-1.col-xs-2
 					button.btn.btn-default.cardSelection(type='button') 2
-				div.col-md-1.col-xs-1
+				div.col-md-1.col-xs-2
 					button.btn.btn-default.cardSelection(type='button') 3
-				div.col-md-1.col-xs-1
+				div.col-md-1.col-xs-2
 					button.btn.btn-default.cardSelection(type='button') 5
-				div.col-md-1.col-xs-1
+				div.col-md-1.col-xs-2
 					button.btn.btn-default.cardSelection(type='button') 8
-				div.col-md-1.col-xs-1
+				div.col-md-1.col-xs-2
 					button.btn.btn-default.cardSelection(type='button') 13
-				div.col-md-1.col-xs-1
+				div.col-md-1.col-xs-2
 					button.btn.btn-default.cardSelection(type='button') 20
-				div.col-md-1.col-xs-1
+				div.col-md-1.col-xs-2
 					button.btn.btn-default.cardSelection(type='button') 40
-				div.col-md-1.col-xs-1
+				div.col-md-1.col-xs-2
 					button.btn.btn-default.cardSelection(type='button') 100
-				div.col-md-1.col-xs-1
+				div.col-md-1.col-xs-2
 					button.btn.btn-default.cardSelection(type='button') ?
 
 			ul#cardsResult
