Play Again Implementation
Play Again working
Planning Poker is now version 0.9
TODO : Final testing and ReadMe Changes

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -126,11 +126,12 @@ body {
 // -------------------------
 
 #preGame{
+	// Hide this and show #game directly for dev purposes
 	//display: none;
 }
 
 #game{
-	// Hide the game until the get planning button is pressed
+// Hide the game until the get planning button is pressed
   display:none;
 	
 	h2#userStory{
@@ -189,10 +190,6 @@ body {
 				}
 			}
 		}
-	}
-
-	#playAgain{
-		display: none;
 	}
 
 	// List of online users
