--- a/views/partials/navigation.jade
+++ b/views/partials/navigation.jade
@@ -1,15 +1,10 @@
 .navbar.navbar-default
   .container
     .navbar-header
-      button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
-        span.sr-only Toggle navigation
-        span.icon-bar
-        span.icon-bar
-        span.icon-bar
+      //- button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
+      //-   span.sr-only Toggle navigation
+      //-   span.icon-bar
+      //-   span.icon-bar
+      //-   span.icon-bar
       a.navbar-brand(href='/') Planning Poker
-    .collapse.navbar-collapse
-      ul.nav.navbar-nav
-        li(class=title=='Home'?'active':undefined)
-          a(href='/') Home
-        li(class=title=='Contact'?'active':undefined)
-          a(href='/contact') Contact
+    //.collapse.navbar-collapse
