Readme and license changes
Readme overhaul
License changed to David Boclé
Package.json modified
navbar-header with round corner bug modified

--- a/views/partials/navigation.jade
+++ b/views/partials/navigation.jade
@@ -1,10 +1,10 @@
-.navbar.navbar-default
+.navbar.navbar-default.navbar-fixed-top
   .container
     .navbar-header
-      //- button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
-      //-   span.sr-only Toggle navigation
-      //-   span.icon-bar
-      //-   span.icon-bar
-      //-   span.icon-bar
+      //button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
+      //span.sr-only Toggle navigation
+      //span.icon-bar
+      //span.icon-bar
+      //span.icon-bar
       a.navbar-brand(href='/') Planning Poker
     //.collapse.navbar-collapse
