--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -11,7 +11,7 @@ html, body {
 }
 
 body {
-  padding-top: 70px;
+  //padding-top: 70px;
 }
 
 #wrap {
@@ -43,6 +43,10 @@ body {
 .navbar-brand {
   margin-left: 15px;
   height: 45px;
+}
+
+.navbar{
+	border-radius: 0;
 }
 
 // Social Buttons
