--- a/views/partials/navigation.jade
+++ b/views/partials/navigation.jade
@@ -6,7 +6,7 @@
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand(href='/') Project name
+      a.navbar-brand(href='/') Planning Poker
     .collapse.navbar-collapse
       ul.nav.navbar-nav
       
