feat(pre-multiRoom & qrCode generation)
NOT FULLY FUNCTIONNAL YET
Multi-Room views & rooting
qrCode Generation

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -129,6 +129,22 @@ body {
 // Home
 // -------------------------
 
+#roomForm{
+  width:435px;
+  margin: 0 auto;
+
+  .form-group{
+    margin-right:5px;
+
+    #roomName{
+      width:360px;
+    }
+  }
+  .btn{
+    padding-top:9px;
+  }
+}
+
 #preGame{
 	// Hide this and show #game directly for dev purposes
 	//display: none;
@@ -207,6 +223,11 @@ body {
 			font-style: italic;
 		}
 	}
+}
+
+#qrCode{
+	width:200px;
+	margin: 1em auto;
 }
 
 // Alerts placement
