--- a/views/home.jade
+++ b/views/home.jade
@@ -1,55 +1,12 @@
 extends layout
 
 block content
-	div#preGame
-		h1 Real Time Planning Poker
-		p.lead
-			| Planning Poker is a way to estimate a relative effort for a given task.
-			br
-			| This implementation was build upon new technologies such as NodeJS, Socket.IO...
-		button#getPlanning.btn.btn-success.btn-lg.btn-block(type='button') Get planning !
-
-	div#game.row
-		div.col-md-10.clearfix
-			h2#userStory User Story
-			form#userStoryForm
-				.input-group
-					span.input-group-addon ✍
-					input.form-control(type='text', placeholder='User story', autofocus)
-
-			div#progressBarArea
-				div#progressBar.progress.progress-striped.active
-					div.progress-bar(role='progressbar', aria-valuenow='0', aria-valuemin='0', aria-valuemax='100', style='width: 0%')
-					
-			div#cardsSelection.row
-				div.col-md-1.col-xs-2
-					button.btn.btn-default.cardSelection(type='button') 0
-				div.col-md-1.col-xs-2
-					button.btn.btn-default.cardSelection(type='button') 1/2
-				div.col-md-1.col-xs-2
-					button.btn.btn-default.cardSelection(type='button') 1
-				div.col-md-1.col-xs-2
-					button.btn.btn-default.cardSelection(type='button') 2
-				div.col-md-1.col-xs-2
-					button.btn.btn-default.cardSelection(type='button') 3
-				div.col-md-1.col-xs-2
-					button.btn.btn-default.cardSelection(type='button') 5
-				div.col-md-1.col-xs-2
-					button.btn.btn-default.cardSelection(type='button') 8
-				div.col-md-1.col-xs-2
-					button.btn.btn-default.cardSelection(type='button') 13
-				div.col-md-1.col-xs-2
-					button.btn.btn-default.cardSelection(type='button') 20
-				div.col-md-1.col-xs-2
-					button.btn.btn-default.cardSelection(type='button') 40
-				div.col-md-1.col-xs-2
-					button.btn.btn-default.cardSelection(type='button') 100
-				div.col-md-1.col-xs-2
-					button.btn.btn-default.cardSelection(type='button') ?
-
-			ul#cardsResult
-
-		div.col-md-2 
-			ul#participants.list-group
-
-	div#alerts
+	h1 Real Time Planning Poker
+	p.lead
+		| Planning Poker is a way to estimate a relative effort for a given task.
+		br
+		| This implementation was build upon new technologies such as NodeJS, Socket.IO...
+	form#roomForm.form-inline(role='form')
+		.form-group
+			input#roomName.form-control(type='text', placeholder='Creating room name...', readonly=true)
+		button.btn.btn-default(disabled=true) Go ▶
