feat (multi-room for name changing & card selection)
Ability to change name broadcasted to room only
Ability to select card broadcasted to room only
Participant’s list broadcasted to room only

--- a/views/room.jade
+++ b/views/room.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
 	div#preGame
-		h1 Real Time Planning Poker
+		h1(data-room="#{room}") Real Time Planning Poker
 		p.lead
 			| Planning Poker is a way to estimate a relative effort for a given task.
 			br
