feat (copy link to clipboard)
Ability to copy link directly to clipboard which sends an alert when
copied

--- a/views/room.jade
+++ b/views/room.jade
@@ -9,7 +9,7 @@ block content
 			| This implementation was build upon new technologies such as NodeJS, Socket.IO...
 			br
 			br
-			a(href='/room/#{room}') Share the link to your collaborators ➔
+			a#shareLink(href='/room/#{room}') Share the link to your collaborators ➔
 			br
 
 		button#getPlanning.btn.btn-success.btn-lg.btn-block(type='button') Get planning !
