--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,8 +4,9 @@ html
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
-    meta(name='description', content='')
-    meta(name='author', content='')
+    meta(name='description', content="Got no playing cards to do your planning poker ? No worries, in less than 5 minutes form now, you'll be ready to plan !")
+    meta(name='author', content='David Boclé')
+    meta(name="google-site-verification" content="osH3Nn3IOfX5sRIExHR9mD0VMUMU4cvWgalsWLY8naU")
     // Favicons
     link(rel="apple-touch-icon", sizes="57x57", href="/apple-touch-icon-57x57.png")
     link(rel="apple-touch-icon", sizes="114x114", href="/apple-touch-icon-114x114.png")
