feat (get share link back) fix (corrected alert names)
Get share links back with one click
Alert previously showed generated names of joining clients even if the
localStorage was already set.

--- a/views/room.jade
+++ b/views/room.jade
@@ -59,4 +59,8 @@ block content
 		div.col-md-2 
 			ul#participants.list-group
 
+			button#switchGame.btn.btn-info.btn-block(type='button')
+				i.fa.fa-external-link
+				| Share link
+
 	div#alerts
