fix (server crash on homepage)
Divided main & home.js because while on homepage, it sent  empty
request to server resulting in a crash

--- a/views/home.jade
+++ b/views/home.jade
@@ -10,3 +10,6 @@ block content
 		.form-group
 			input#roomName.form-control(type='text', placeholder='Creating room name...', readonly=true)
 		button.btn.btn-default(disabled=true) Go ▶
+
+block append scripts
+	script(src='/js/home.js?v=#{cacheBuster}')
